edit aggregate condition for search hotels function route

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MongoDb_URI='mongodb://127.0.0.1:27017/asm2?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.3.9'
+MongoDb_URI='mongodb://127.0.0.1:27017/asm2?directConnection=true&serverSelectionTimeoutMS=2000'
